Time: 8 ms (48.81%) | Memory: 57.1 MB (46.58%) - LeetSync